[gd_scene load_steps=6 format=3 uid="uid://c4fuudd1n6kqx"]

[ext_resource type="Script" path="res://Scripts/pitcher_ai.gd" id="1_whe6j"]
[ext_resource type="PackedScene" uid="uid://bkdvabqt0oysw" path="res://Scenes/gameBall.tscn" id="2_e3hv2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ugx3c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6cit"]
size = Vector2(6, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lina6"]
size = Vector2(12, 39)

[node name="Pitcher" type="CharacterBody2D"]
collision_mask = 9
script = ExtResource("1_whe6j")
gameBall = ExtResource("2_e3hv2")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4.23516e-22, -2.84217e-14)
scale = Vector2(5.5, 31.25)
texture = SubResource("PlaceholderTexture2D_ugx3c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v6cit")

[node name="ReleasePoint" type="Node2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_lina6")
debug_color = Color(0.906287, 0.238013, 0.481607, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
